- Implementa documentação para Update Product.
